# services/bff/handler/item/schema.go
@@ -1,5 +1,12 @@
 package item
 
+type CreateItemRequest struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Target      string `json:"target"`
+	Amount      int    `json:"amount"`
+}
+
 type Item struct {
 	ID          string `json:"id"`
 	Name        string `json:"name"`
